custom scrollbar, list fixed height and favicon added

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -238,8 +238,9 @@ button:hover {
 
 #url-list {
   width: 100%;
-  min-height: 250px;
+  max-height: 500px;
   padding: 1rem;
+  overflow-y: auto;
   border-radius: 10px;
   background: var(--white);
   margin: 2rem 0;
@@ -272,6 +273,32 @@ button:hover {
 }
 .url-list-item div:nth-child(2) a {
   color: var(--cyan);
+}
+
+/* Custom Scrollbar */
+
+.style-6::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+.style-6::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+.style-6::-webkit-scrollbar-thumb {
+  background-color: var(--cyan);
+  background-image: -webkit-linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.2) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0.2) 75%,
+    transparent 75%,
+    transparent
+  );
 }
 
 /* Result end */
